websockets and notifications
